--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ if (computerMove  === 'rock') {
 
 } else if ( playerMove === 'rock') {
   if (computerMove  === 'rock') {
-  result = 'tie.';
+  result = 'Tie.';
 } else if (computerMove === 'paper') {
   result = 'You lose.'; 
 } else if (computerMove === 'scissors') {
