--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ height: 50px;
 
     <button class="js-reset-button reset-button">Reset Score</button> 
 
-      <button class="js-autoPlay-button autoPlay-button">Auto play</button>
+      <button class="js-autoPlay-button autoPlay-button"></button>
 
 
 
