--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ function autoPlay () {
   isAutoPlaying = true;
 
 } else {
-    document.querySelector('.js-autoPlay-button').innerHtml = 'Auto Play';
+    document.querySelector('.js-autoPlay-button').innerHtml = 'Auto play';
     
   clearInterval(intervalId);
   isAutoPlaying = false;
